# patina-dxe-core-qemu

./: Cargo.toml  Makefile.toml  README.md  c.bat  cspell.yml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: binary-size-comment.yml  binary-size-report.yml  ci-workflow.yml  patina-qemu-pr-validation-pending.yml  patina-qemu-pr-validation.yml  publish-binaries.yml
docs/: windbg-qemu-debugging.md
patina_dxe_core-8.3.0/: .cargo_vcs_info.json  Cargo.toml
src/: armvirt.rs  config.rs  lib.rs  main.rs  q35.rs  sbsa.rs  uart_debug.rs
src/armvirt/component/: service.rs
src/armvirt/component/service/: smbios_platform.rs
src/q35/: timer.rs
src/q35/component/: service.rs
src/q35/component/service/: mm_config_provider.rs  mm_control.rs  mm_test.rs  smbios_platform.rs
src/sbsa/: component.rs
src/sbsa/component/: service.rs
src/sbsa/component/service/: smbios_platform.rs  smbios_test.rs
