[package]
name = "qemu_dxe_core"
version = "3.0.9"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "qemu_q35_dxe_core"
path = "bin/q35_dxe_core.rs"
required-features = ["x64", "dxe_core"]

[[bin]]
name = "qemu_ovmf_dxe_core"
path = "bin/ovmf_dxe_core.rs"
required-features = ["x64", "dxe_core"]

[[bin]]
name = "qemu_armvirt_dxe_core"
path = "bin/arm_virt_dxe_core.rs"
required-features = ["aarch64", "dxe_core"]

[[bin]]
name = "q35_mm_supervisor"
path = "bin/q35_mm_supervisor.rs"
required-features = ["x64", "save_state_amd", "supv"]

[[bin]]
name = "q35_mm_user_core"
path = "bin/q35_mm_user_core.rs"
required-features = ["x64", "user_core"]
[lib]
name = "qemu_resources"
path = "src/lib.rs"

[dependencies]

# Patina dependencies
patina = { version = "22" }
patina_acpi = { version = "22", optional = true }
patina_adv_logger = { version = "22", optional = true }
patina_debugger = { version = "22", optional = true }
patina_dxe_core = { version = "22", optional = true }
patina_ffs_extractors = { version = "22", optional = true }
patina_mm = { version = "22", optional = true }
patina_mm_supervisor = { version = "22", optional = true }
patina_mm_user_core = { version = "22", optional = true }
patina_performance = { version = "22", optional = true }
patina_samples = { version = "22", optional = true }
patina_smbios = { version = "22", optional = true }
patina_stacktrace = { version = "22", optional = true }
patina_test = { version = "22", features = ["test-runner"], optional = true }

# Other dependencies
log = { version = "^0.4", default-features = false, features = [
  "release_max_level_info",
] }
qemu-exit = { version = "4", optional = true }
r-efi = { version = "^6", default-features = false }
x86_64 = { version = "=0.15.4", default-features = false, features = [
  "instructions",
], optional = true }

[features]
ci_features = [
  'build_debugger',
  'compatibility_mode_allowed',
  'enable_debugger',
  'exit_on_patina_test_failure',
  'v1_resource_descriptor_support',
]
# Keep the default features here in sync with the features listed in BASE_FEATURES in Makefile.toml
default = ["compatibility_mode_allowed", "exit_on_patina_test_failure"]
compatibility_mode_allowed = ["patina_dxe_core/compatibility_mode_allowed"]
v1_resource_descriptor_support = [
  "patina_dxe_core/v1_resource_descriptor_support",
]
x64 = ["x86_64"]
aarch64 = []
doc = []
std = []
build_debugger = ["patina_dxe_core/debugger_reload"]
enable_debugger = ["build_debugger"]
exit_on_patina_test_failure = ["qemu-exit"]
save_state_amd = ["patina_mm_supervisor/save_state_amd"]
dxe_core = [
    "patina_acpi",
    "patina_adv_logger",
    "patina_debugger",
    "patina_dxe_core",
    "patina_mm",
    "patina_performance",
    "patina_samples",
    "patina_smbios",
    "patina_test",
    "patina_ffs_extractors",
]
supv = [
  "patina_mm_supervisor",
  "patina_stacktrace"
]
user_core = [
    "patina_mm_user_core",
    "patina_adv_logger",
]

[patch.crates-io]
patina = { path = 'D:\Repos\patina\sdk\patina' }
patina_mm = { path = 'D:\Repos\patina\components\patina_mm' }
patina_mm_supervisor = { path = 'D:\Repos\patina\patina_mm_supervisor' }
patina_stacktrace = { path = 'D:\Repos\patina\core\patina_stacktrace' }
patina_mm_user_core = { path = 'D:\Repos\patina\patina_mm_user_core' }
