[package]
name = "qemu_dxe_core"
version = "3.1.2"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "qemu_q35_dxe_core"
path = "bin/q35_dxe_core.rs"
required-features = ["x64", "dxe_core"]

[[bin]]
name = "qemu_ovmf_dxe_core"
path = "bin/ovmf_dxe_core.rs"
required-features = ["x64", "dxe_core"]

[[bin]]
name = "qemu_armvirt_dxe_core"
path = "bin/arm_virt_dxe_core.rs"
required-features = ["aarch64", "dxe_core"]

[[bin]]
name = "q35_mm_supervisor"
path = "bin/q35_mm_supervisor.rs"
required-features = ["x64", "supv"]

[[bin]]
name = "q35_mm_user_core"
path = "bin/q35_mm_user_core.rs"
required-features = ["x64", "user_core"]
[lib]
name = "qemu_resources"
path = "src/lib.rs"

[dependencies]

# Patina dependencies
patina = { version = "22", default-features = false }
patina_acpi = { version = "22", optional = true }
patina_adv_logger = { version = "22", optional = true }
patina_debugger = { version = "22", optional = true }
patina_dxe_core = { version = "22", optional = true }
patina_ffs_extractors = { version = "22", optional = true }
patina_mm = { version = "22", optional = true }
patina_mm_cpu = { version = "22", optional = true }
patina_mm_supervisor = { version = "22", optional = true }
patina_mm_user_core = { version = "22", optional = true }
patina_performance = { version = "22", optional = true }
patina_samples = { version = "22", optional = true }
patina_smbios = { version = "22", optional = true }
patina_stacktrace = { version = "22", optional = true }
patina_test = { version = "22", features = ["test-runner"], optional = true }

# Other dependencies
log = { version = "^0.4", default-features = false, features = [
  "release_max_level_info",
] }
qemu-exit = { version = "4", optional = true }
r-efi = { version = "7", default-features = false }
x86_64 = { version = "=0.15.4", default-features = false, features = [
  "instructions",
], optional = true }
zerocopy = { version = "0.8", features = ["derive"] }

[features]
ci_features = [
  'build_debugger',
  'compatibility_mode_allowed',
  'enable_debugger',
  'exit_on_patina_test_failure',
  'v1_resource_descriptor_support',
]
# Keep the default features here in sync with the features listed in BASE_FEATURES in Makefile.toml
default = ["compatibility_mode_allowed", "exit_on_patina_test_failure"]
compatibility_mode_allowed = ["patina_dxe_core/compatibility_mode_allowed"]
v1_resource_descriptor_support = [
  "patina_dxe_core/v1_resource_descriptor_support",
]
x64 = ["x86_64"]
aarch64 = []
doc = []
std = []
build_debugger = ["patina_dxe_core/debugger_reload"]
enable_debugger = ["build_debugger"]
exit_on_patina_test_failure = ["qemu-exit"]
save_state_amd = ["patina_mm_supervisor/save_state_amd"]
save_state_intel = ["patina_mm_supervisor/save_state_intel"]
dxe_core = [
    "patina_acpi",
    "patina_adv_logger",
    "patina_debugger",
    "patina_dxe_core",
    "patina_mm",
    "patina_performance",
    "patina_samples",
    "patina_smbios",
    "patina_stacktrace",
    "patina_test",
    "patina_ffs_extractors",
]
supv = [
  "patina_mm_supervisor",
  "patina_stacktrace"
]
user_core = [
    "patina_mm_user_core",
    "patina_mm_cpu",
    "patina_adv_logger",
    "patina_stacktrace"
]

[patch.crates-io]
patina = { git = "https://github.com/OpenDevicePartnership/patina.git", branch = "feature/supv" }
patina_mm = { git = "https://github.com/OpenDevicePartnership/patina.git", branch = "feature/supv" }
patina_mm_supervisor = { git = "https://github.com/OpenDevicePartnership/patina.git", branch = "feature/supv" }
patina_stacktrace = { git = "https://github.com/OpenDevicePartnership/patina.git", branch = "feature/supv" }
patina_mm_user_core = { git = "https://github.com/OpenDevicePartnership/patina.git", branch = "feature/supv" }
patina_mm_cpu = { git = "https://github.com/OpenDevicePartnership/patina.git", branch = "feature/supv" }
patina_acpi = { git = "https://github.com/OpenDevicePartnership/patina.git", branch = "feature/supv" }
patina_adv_logger = { git = "https://github.com/OpenDevicePartnership/patina.git", branch = "feature/supv" }
patina_performance = { git = "https://github.com/OpenDevicePartnership/patina.git", branch = "feature/supv" }
patina_dxe_core = { git = "https://github.com/OpenDevicePartnership/patina.git", branch = "feature/supv" }
patina_debugger = { git = "https://github.com/OpenDevicePartnership/patina.git", branch = "feature/supv" }
patina_ffs_extractors = { git = "https://github.com/OpenDevicePartnership/patina.git", branch = "feature/supv" }
patina_samples = { git = "https://github.com/OpenDevicePartnership/patina.git", branch = "feature/supv" }
patina_smbios = { git = "https://github.com/OpenDevicePartnership/patina.git", branch = "feature/supv" }
patina_test = { git = "https://github.com/OpenDevicePartnership/patina.git", branch = "feature/supv" }
